# debby

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: README.md
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
misc/: build-cl.bat  build-ninja.bat  build.bat  generate-ninja.bat  generate.bat  run.bat
src/: game-manager.cpp  game-manager.h  game.cpp  game.h  game_manager.cpp  game_manager.h  globals.h  log.cpp  log.h  main.cpp  mem.h  screen.cpp  screen.h  utils.cpp  utils.h
src/common/: components.h  components.hpp  globals.h  globals.hpp  utils.h  utils.hpp
src/components/: animation_component.hpp  boxcollider_component.hpp  rigidbody_component.hpp  sprite_component.hpp  transform.cpp  transform.h  transform_component.hpp
src/ecs/: ecs.cpp  ecs.h  ecs.hpp
src/events/: collision_event.hpp  event.hpp  keypressed_event.hpp
src/managers/: asset_manager.cpp  asset_manager.h  asset_manager.hpp  event_manager.cpp  event_manager.hpp  game.cpp  game.h  game_manager.cpp  game_manager.h  game_manager.hpp  screen_manager.cpp  screen_manager.hpp
src/systems/: animation_system.hpp  collision_system.hpp  collisiondebug_system.hpp  damage_system.hpp  ecs.cpp  ecs.h  keyboardcontrol_system.hpp  movement.h  movement.hpp  movement_system.hpp  render.h  render.hpp  render_system.hpp
